# hyper-fluent-python

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
.hypothesis/constants/: 6ba69dc089a2499c  af77110ca510d402  b520afe407b3785b  fd3558c1a354ad7d
.hypothesis/examples/04e6b3400353b141/: 2d2c0770427ff9e1  47c8bbb85ed24e2b
.prompts/: 00_fluent_python_learning_plan.md  02_project_structure.md  README.md  debugging_guide.md  getting_started.md
docs/: index.md
notebooks/: ch01_french_deck_debugging.ipynb
rust/: Cargo.toml
rust/examples/: demo.rs
rust/src/: ch01_data_model.rs  lib.rs
rust/src/ch01_data_model/: french_deck.rs  vector.rs
src/fluent_python/: __init__.py
src/fluent_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fluent_python/ch01_data_model/: __init__.py  comparison.py  french_deck.py  vector.py
src/fluent_python/ch01_data_model/exercises/: __init__.py  compare_implementations.py  debug_original.py  debug_robust.py
src/fluent_python/ch01_data_model/original/: __init__.py  french_deck.py  vector.py
src/fluent_python/ch01_data_model/robust/: __init__.py
tests/ch01_data_model/: __init__.py  test_french_deck.py  test_original_french_deck.py  test_original_vector.py  test_vector.py
