[project]
name = "fluent_python"
version = "0.1.0"
description = "Exercises and extensions from Fluent Python with strong typing."
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-benchmark",
    "hypothesis",
    "mypy",
    "typeguard",
    "ruff",
    "rich",
    "ipython",
    "jupyterlab",
    "jupyterlab-debugger",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
strict_optional = true

[tool.ruff]
line-length = 100
